New features for using the process that manages teachers. Master records can be generated, depending on the type, for any part. To display sections, actions, statuses, etc.
